feat: update typography style

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,31 +6,25 @@
 
 @layer utilities {
   .instill-text-h1 {
-    @apply font-mono font-semibold text-[32px] leading-[42px] sm:text-[64px] sm:leading-[83px];
+    @apply font-sans text-[32px] font-medium leading-[42px];
   }
   .instill-text-h2 {
-    @apply font-mono font-medium text-[23px] leading-[30px] sm:text-[36px] sm:leading-[47px];
-  }
-  .instill-text-h2-fixed {
-    @apply font-mono font-medium text-[36px] leading-[47px];
+    @apply font-mono text-[20px] font-medium leading-[26px];
   }
   .instill-text-h3 {
-    @apply font-mono font-medium text-lg leading-[27px] sm:text-2xl sm:leading-[31px];
-  }
-  .instill-text-h3-light {
-    @apply font-mono font-light text-lg leading-[27px] sm:text-2xl sm:leading-[41px];
-  }
-  .instill-text-body-fixed {
-    @apply font-sans font-normal text-base leading-[28px];
+    @apply font-sans text-base font-normal leading-[28px];
   }
   .instill-text-body {
-    @apply font-sans font-normal text-sm leading-[18px];
+    @apply font-sans text-sm font-normal leading-[18px];
+  }
+  .instill-text-bold-body {
+    @apply font-sans text-sm font-semibold leading-[18px];
   }
   .instill-text-small {
-    @apply font-mono font-normal text-xs;
+    @apply font-mono text-xs font-normal leading-[15.6px];
   }
   .instill-input-highlight {
-    @apply border border-instillGray70 focus:outline-none focus:ring-0 focus:ring-white focus:border-instillBlue;
+    @apply border-instillGray70 border focus:border-instillBlue focus:outline-none focus:ring-0 focus:ring-white;
   }
 }
 
