fix: fix issue on end operator

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,14 @@
 
 @tailwind utilities;
 
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
 @font-face {
   font-family: "instill";
   font-style: normal;
