fix: fix connection issue and not showing result issue

--- a/apps/console/src/styles/global.css
+++ b/apps/console/src/styles/global.css
@@ -34,4 +34,7 @@
 :root {
   --topbar-height: 72px;
   --pipeline-builder-bottom-bar-height: 24px;
+  --pipeline-builder-node-available-width: 332px;
+  --pipeline-builder-node-padding-x: 12px;
+  --pipeline-builder-node-padding-y: 10px;
 }
