feat: update fields

--- a/apps/console/src/styles/global.css
+++ b/apps/console/src/styles/global.css
@@ -37,4 +37,5 @@
   --pipeline-builder-node-available-width: 332px;
   --pipeline-builder-node-padding-x: 12px;
   --pipeline-builder-node-padding-y: 10px;
+  --pipeline-builder-right-panel-width: 456px;
 }
