--- a/apps/console/src/styles/github-markdown.css
+++ b/apps/console/src/styles/github-markdown.css
@@ -312,6 +312,7 @@
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 2em;
+  
 }
 
 .markdown-body ol ol,
@@ -323,7 +324,7 @@
 .markdown-body ul ol ol,
 .markdown-body ol ul ol,
 .markdown-body ol ol ol {
-  list-style-type: lower-alpha;
+  list-style-type: lower-roman;
 }
 
 .markdown-body dd {
@@ -611,6 +612,14 @@
 .markdown-body h6 code {
   padding: 0 .2em;
   font-size: inherit;
+}
+
+.markdown-body ul {
+  list-style-type: disc;
+}
+
+.markdown-body ol {
+  list-style-type: decimal;
 }
 
 .markdown-body ul.no-list,
